--- a/modA/Ex001/index.html
+++ b/modA/Ex001/index.html
@@ -10,6 +10,8 @@
 
     <script>
         window.alert('Minha primeira mensagem!')
+        window.confirm('Tu gostas de JS?')
+        window.prompt('Qual é seu nome?')
     </script>
     
 </body>
