--- a/modB/EX001/index.html
+++ b/modB/EX001/index.html
@@ -9,7 +9,9 @@
     <h1>Olá, mundo!!</h1>
 
     <script>
-        window.prompt('Qual é seu nome?')
+        var nome = window.prompt('Qual e teu nome?')
+        window.alert ('Olá, ' + nome + ' , Bem vindo ao meu site')
+        window.confirm('Seu nome é, ' +nome+ ', mesmo?')
     </script>
     
 </body>
