--- a/modE/ex001/index.html
+++ b/modE/ex001/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hora do dia</title>
+    <title>Contagem de números</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
